--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,7 @@
     text-decoration: none;
 }
 
-body {
-    overflow-x: hidden;
-}
+
 
 /*both logo and menu*/
 .header {
@@ -18,6 +16,10 @@ body {
     display: flex;
     justify-content: space-between;
     margin: 0 3.4rem;
+}
+
+li {
+    list-style: none;
 }
 
 /*logo*/
@@ -40,23 +42,28 @@ body {
     top: 9.3rem;
     background-color: white;
     box-shadow: 0 0.2rem 0.5rem 0 rgba(0, 0, 0, .15);
-    border-radius: 0.8rem;
-    padding: 2rem;
-    transition: transform 500ms ease-in-out;
-    transform: translateX(100%);
+    transition: width 500ms ease-in-out;
+    width: 0px;
+    overflow: hidden;
     z-index: 2;
     right: 0;
 }
 
 .dropdown-open {
     right: 0;
-    transform: translateX(0);
+    width: 45%;
+    border-radius: 0.8rem;
+}
+
+.dropdown-menu li {
+    width: 40rem;
 }
 
 .dropdown-menu a {
     font-size: 2.2rem;
     color: black;
     line-height: 2;
+    padding: 3rem;
 }
 
 /*hover effects for all the a tags in the dropdown menu*/
